# bitaxe-cockpit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bitaxe_cockpit.py  bitaxe_cockpit.tcss  bitaxe_ghostty_wrapper.c  polpo_arc_gauge.py  pyproject.toml
.github/workflows/: ci.yml
docs/: cockpit-onda-hero.tape
scripts/: ws_check.py
tests/: conftest.py  test_smoke.py
tests/fixtures/api/system/: info.json
