[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitaxe-cockpit"
version = "0.1.0"
description = "A live TUI cockpit for Bitaxe solo Bitcoin miners — Italian-first, dark theme, gamified, animated ASCII title."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
    "bitcoin",
    "bitaxe",
    "mining",
    "tui",
    "textual",
    "cockpit",
    "monitoring",
    "asic",
    "axeos",
    "solo-mining",
]
authors = [
    { name = "Mattia Calastri", email = "agenziacrescita@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.80",
    "httpx>=0.27",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/mattiacalastri/bitaxe-cockpit"
Issues = "https://github.com/mattiacalastri/bitaxe-cockpit/issues"
Source = "https://github.com/mattiacalastri/bitaxe-cockpit"

[project.scripts]
bitaxe-cockpit = "bitaxe_cockpit:main"

[tool.setuptools]
py-modules = ["bitaxe_cockpit"]

[tool.setuptools.package-data]
"*" = ["bitaxe_cockpit.tcss"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
